--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="navbar-collapse collapse" id="collapsingNavbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
-          <a class="nav-link" href="javascript:movePage(0, NaN);">Home</a>
+          <a class="nav-link" href="javascript:movePage(0, NaN);">Inleiding</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target="#collapsingNavbar">
           <a class="nav-link" href="javascript:movePage(1, NaN);">Een kijkje bij de wolf</a>
@@ -1096,86 +1096,6 @@
               kwaad kunnen doen. Daarbij is er in het verleden erg weinig aanvallen geweest op de mens. In 400 jaar tijd was het zeer zeldzaam voor een wolf om een mens aan te vallen, waarvan de meeste incidenten te maken hadden met hondsdolheid, uitlokking
               door mensen of doordat de mens het leefgebied van de wolf te drastisch heeft aangepast.
             </p>
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container page14">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height14">
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>text</h1>
-          </div>
-          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
-
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container page15">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height15">
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>text</h1>
-          </div>
-          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
-
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container page16">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height16">
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>text</h1>
-          </div>
-          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
-
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container page17">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height17">
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>text</h1>
-          </div>
-          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
-
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container page18">
-    <div class="row">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 contentblock height18">
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
-            <h1>text</h1>
-          </div>
-          <div class="col-lg-12 col-md12 col-sm-12 col-xs-12 content">
-
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
