--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>Lupus Inc.</title>
-  <link rel="icon" href="vendor/images/star.png">
+  <link rel="icon" href="vendor/images/favicon.ico">
   <!-- CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
