--- a/index.html
+++ b/index.html
@@ -732,6 +732,32 @@
               Dit geeft duidelijker aan wat de gevolgen zijn van wolven, en dan niet zo zeer op individueel niveau maar op hele populaties. Het geeft ook aan hoe krachtig het effect is van de wolf op ecosystemen en dat ze een belangrijke rol spelen in de natuur op
               plaatsen zoals Yellowstone.
             </p>
+            <p> 
+    Wolven hebben dus een enorm effect op een ecosysteem, niet alleen omdat zij
+    goed hun “werk” kunnen uitvoeren en ze zo goed zijn in het jagen op grote
+    herbivoren, maar ook omdat Yellowstone een ideaal gebied is voor de wolven.
+    Het is een ideaal gebied, omdat de herbivoren de herbivoren in dit gebied
+    niet gewend zijn aan de aanwezigheid van een toppredator. Dan zou je
+    waarschijnlijk denken dat wolven in een mum van tijd een enorme
+    populatiegroei zouden ondergaan en die groei blijven vasthouden. Het eerste
+    gedeelte klopt wel, maar als je kijkt naar de eerdere grafieken zie je dat
+    er op gegeven moment een S-vormige grafiek ontstaat bij het aantal wolven
+    in Yellowstone. Dit wordt veroorzaakt door een negatieve terugkoppeling.
+    Dit houdt in dat het proces geremd wordt tot er weer een bepaalde waarde
+    wordt bereikt. Pas als die waarde wordt bereikt stopt het proces met geremd
+    worden. In het geval van de wolf verloopt het proces zo: door het grote
+    aantal grote herbivoren in Yellowstone kon de de wolvenpopulatie
+    exponentieel groeien, maar op gegeven moment verdween die grote groep
+    herbivoren, waardoor er dus minder voedsel was voor de wolven. Dit zorgt
+    uiteindelijk voor het kleiner worden van de totale wolvenpopulatie. Als
+    gevolg van het kleiner worden van de totale wolvenpopulatie konden de grote
+    herbivoren weer in aantallen groeien. Door het groeien van de populatie
+    herbivoren ontstond er meer voedsel voor de wolven, waardoor de
+    wolvenpopulatie alweer kon groeien. Nu ontstaat er een cyclus van het
+    groeien en dalen van beide populaties tegenovergesteld van elkaar. Door dit
+    proces is er nu een evenwicht ontstaan tussen de aantallen wolven en de
+    grote herbivoren.
+</p>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
         </div>
