--- a/index.html
+++ b/index.html
@@ -711,7 +711,10 @@
             </p>
             <p>
               Sinds 1995 zie je dat het gemiddelde aantal coyotes afneemt t/m 2002 en dan weer toeneemt, maar niet zo hoog als daarvoor. Je kan wel zien dat er in 2007 een hoge piek was, waar het aantal coyotes bijna de 60 raakte (net zoals 13 jaar geleden), maar het
-              jaar daarop is het weer gedaald naar 41. Dit had als gevolg dat de rode vos ook vaker te zien was omdat er minder coyotes waren die bepaalde gebieden als territorium geclaimd hadden. Maar er kwamen ook veel meer kleine dieren zoals konijnen
+              jaar daarop is het weer gedaald naar 41. Een grote oorzaak van het afnemen van coyotes, is dat er onder nu meer concurrentie ontstond tussen de coyotes zelf, omdat het voedsel voor de coyotes nu niet meer in overvloed is, moeten de coyotes meer en meer concurreren met elkaar om aan voedsel te komen. Dit zorgt uiteindelijk voor een beter aangepaste populatie coyotes.
+            </p>
+            <p>
+              Dit had als gevolg dat de rode vos ook vaker te zien was omdat er minder coyotes waren die bepaalde gebieden als territorium geclaimd hadden. Maar er kwamen ook veel meer kleine dieren zoals konijnen
               en hertmuizen, wat weer als gevolg had dat er meer roodstaartbuizerds, kale adelaars en vele andere vogels en kleine zoogdieren tevoorschijn kwamen.
             </p>
             <p>
