--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p>
               Ons profielwerkstuk gaat over de wolf. Maar niet alleen wat de wolf is, maar ook wat hij doet, hoe hij het doet en wat de gevolgen zijn op de natuur om ons heen. De wolf is namelijk niet zo simpel als de meeste mensen denken. Het is een erg complex dier
               en er spelen veel achterliggende factoren bij het zijn van een wolf. Daarbij zorgt hij voor grote gevolgen in ecosystemen waar de wolf aanwezig is. Maar wat beïnvloed de wolf nou allemaal precies door simpelweg z’n dagelijks leven te lijden?
-              Deze hoofdvraag splitsen we op in de geografische en ecologische veranderingen. Om dit te kunnen beantwoorden gaan we eerst na hoe de wolf nou in elkaar zit en hoe hij de dag doorbrengt als apex predator in zijn roedel zonder dat iemand
+              Deze hoofdvraag splitsen we op in de geografische en ecologische veranderingen. Om dit te kunnen beantwoorden gaan we eerst na hoe de wolf nou in elkaar zit en hoe hij de dag doorbrengt als toppredator in zijn roedel zonder dat iemand
               hem na kan doen.
             </p>
             <p>
