--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <img class="background" src="vendor/images/background.jpg" />
   <!-- Main navigationbar -->
   <nav class="navbar fixed-top navbar-dark navbar-custom" id="navbar">
-    <a class="navbar-brand">Lupus Inc.</a>
+    <a class="navbar-brand" href="javascript:reload();">Lupus Inc.</a>
 
     <button class="btn btn btn-primary contact-button" onclick="javascript:contacts(true);"><i class="fa fa-address-book fa-lg" style="text-align:right;color:white;"></i> Contact</button>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
@@ -99,61 +99,61 @@
                     </div>
                     <div class="carousel-item">
                       <div class="d-block carousel-image carousel-image1" onclick="javascript:movePage(1, NaN);"></div>
-                      <div class="carousel-caption d-none d-md-block">
+                      <div class="carousel-caption">
                         <h1>Een kijkje bij de wolf.</h3>
                       </div>
                     </div>
                 <div class="carousel-item">
                   <div class="d-block carousel-image carousel-image2" onclick="javascript:movePage(2, NaN);"></div>
-                  <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-caption">
                     <h1>Geschiedenis en herkomst.</h3>
                   </div>
                 </div>
             <div class="carousel-item">
               <div class="d-block carousel-image carousel-image3" onclick="javascript:movePage(3, NaN);"></div>
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption">
                 <h1>Bouw van de wolf.</h3>
               </div>
             </div>
         <div class="carousel-item">
           <div class="d-block carousel-image carousel-image4"onclick="javascript:movePage(4, NaN);"></div>
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <h1>Hoe oriënteert de wolf zich?</h3>
           </div>
         </div>
     <div class="carousel-item">
       <div class="d-block carousel-image carousel-image5" onclick="javascript:movePage(5, NaN);"></div>
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h1>Gedrag en communicatie</h3>
       </div>
     </div>
     <div class="carousel-item">
       <div class="d-block carousel-image carousel-image6" onclick="javascript:movePage(7, NaN);"></div>
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h1>Territorium en dieet</h3>
       </div>
     </div>
     <div class="carousel-item">
       <div class="d-block carousel-image carousel-image7" onclick="javascript:movePage(8, NaN);"></div>
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h1>Wat is de invloed op organismen?</h3>
       </div>
     </div>
     <div class="carousel-item">
       <div class="d-block carousel-image carousel-image8" onclick="javascript:movePage(10, NaN);"></div>
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h1>Wat is de invloed op de geografie?</h3>
       </div>
     </div>
     <div class="carousel-item">
       <div class="d-block carousel-image carousel-image9" onclick="javascript:movePage(11, NaN);"></div>
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h1>Waarom de wolf?</h3>
       </div>
     </div>
     <div class="carousel-item">
       <div class="d-block carousel-image carousel-image10" onclick="javascript:movePage(12, NaN);"></div>
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption">
         <h1>Hoe kan de wolf naast de mens leven?</h3>
       </div>
     </div>
