--- a/index.html
+++ b/index.html
@@ -868,6 +868,34 @@
                       voedsel voor de wolven, waardoor de wolvenpopulatie alweer kon groeien. Nu ontstaat er een cyclus van het groeien en dalen van beide populaties tegenovergesteld van elkaar. Door dit proces is er nu een evenwicht ontstaan tussen de
                       aantallen wolven en de grote herbivoren.
                     </p>
+                           <p>
+                      Hier is een schematisch beeld weergegeven van hoe de wolven herintroductie eruitzag en wat de invloed was op de organismen en de omgeving…
+(plaatjes zijn zelfgemaakt door Wilfrid Dekker)
+</p>
+                    <p>
+                      <img class="lazyload" data-src="vendor/images/fase-1-zoomed.png" style="height:auto;width:100%;margin-top:25px;" />
+                    </p>
+                    <p class="italic">
+                      Fase 1
+                    </p>
+                    <p>
+                      <img class="lazyload" data-src="vendor/images/fase-2-zoomed.png" style="height:auto;width:100%;margin-top:25px;" />
+                    </p>
+                    <p class="italic">
+                      Fase 2
+                    </p>
+                    <p>
+                      <img class="lazyload" data-src="vendor/images/fase-3-zoomed.png" style="height:auto;width:100%;margin-top:25px;" />
+                    </p>
+                    <p class="italic">
+                      Fase 3
+                    </p>
+                    <p>
+                      <img class="lazyload" data-src="vendor/images/fase-4-zoomed.png" style="height:auto;width:100%;margin-top:25px;" />
+                    </p>
+                    <p class="italic">
+                      Fase 4
+                    </p>
                   </div>
                   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 spacer"></div>
                 </div>
