--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                       het op het lopen zet. De wolf kan dan aan verschillende kenmerken zien wie zwakker is dan de rest. Misschien zitten er jongen of zeer oude dieren in de kudde, of misschien ziet een hert er gewond uit of loopt die raar.
                     </p>
                     <p>
-                      Dit zijn allemaal kenmerken waarop de wolf let. Zodra de wolf de zwakste op het oog heeft, zet de groep wolven het op het rennen. Tijdens de sprint kan de wolf wel 40 km/h halen, De roedel gaat in formatie, de oudsten voorop om de vitale klap uit te delen
+                      Dit zijn allemaal kenmerken waarop de wolf let. Zodra de wolf de zwakste op het oog heeft, zet de groep wolven het op het rennen. Tijdens de sprint kan de wolf wel 40 km/h halen, de roedel gaat in formatie, de oudsten voorop om de vitale klap uit te delen
                       en om beslissingen te maken. De rest verspreidt zich rondom het doel zodat het niet kan ontsnappen. De wolven mikken graag op de benen om die te beschadigen, zodat de verspreide wolven met z’n allen direct hun prooi kunnen doden.
                       Ook moeten ze uitkijken voor verschillende gevaarlijke situaties, bijvoorbeeld een trap van een ree of een hert die fataal kan zijn voor een wolf. In het geval dat ze hun kans missen, hebben de wolven de mogelijkheid om meerdere
                       kilometers de prooi met 10 km/h te kunnen achtervolgen, maar het is vaak het niet waard om dit te doen.
