--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                     <p>
                       In vroeg 1900, was Yellowstone National Park vol met grassen en bomen en bloeiden het hele ecosysteem. Maar in het jaar 1992, waren er nauwelijks planten over. Biologen zochten naar de oorzaak van dit fenomeen en er waren verschillende theorieën, waaronder
                       klimaatveranderingen of bosbranden. Maar beiden leken niet het geval te zijn. Volgens Bill Ripple, van Oregon State University, was buiten het park de condities van verschillende soorten bomen in goede staat, terwijl er in het Yellowstone
-                      park er nauwelijks bomen waren. Samen met Eric Larson, van University of Wisconsin, kwam Ripple erachter dat er bijna geen middeljarige bomen in het park stonden. De meeste bomen waren 70 jaar oud. Door de ringen in de boomstronken
+                      park er nauwelijks bomen waren. Samen met Eric Larson, van University of Wisconsin, kwam Ripple erachter dat er bijna geen jonge bomen in het park stonden. De meeste bomen waren 70 jaar oud. Door de ringen in de boomstronken
                       te tellen, kwamen ze erachter dat de bomen stopten met regenereren in de jaren 30 van de 20ste eeuw. De biologen vroegen zich af wat er nou rond 1930 is gebeurd. Wat ze wel wisten, is dat vóór 1930 de laatste wolf werd neergeschoten
                       door jagers.
                     </p>
