--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     <p>
                       Volgens jaren later onderzoek, bleken de uitspraken ook daadwerkelijk te kloppen. In 1995 werden de wolven in het Yellowstone National Park geherintroduceerd, waar men veel van heeft geleerd over de effecten en de invloed van predatoren op de natuur.
                       Vroeger werd er namelijk gedacht dat een ecosysteem werd gemaakt met plantenleven als fundering, waarna alle andere organismen rond deze fundering ontstonden. Zodra er gezond plantenleven ontstaat, ontstaat er een balans tussen alle
-                      insecten, kleine diertjes, vogels, grote herbivoren en uiteindelijk de toppredatoren. Bijna alle conservatie en herintroductie projecten werden op dit principe gebouwd. Biologen zouden in een beschadigd gebied eerst al het plantenleven
+                      insecten, kleine dieren, vogels, grote herbivoren en uiteindelijk de toppredatoren. Bijna alle conservatie en herintroductie projecten werden op dit principe gebouwd. Biologen zouden in een beschadigd gebied eerst al het plantenleven
                       opbouwen en weer tot bloei laten komen, voordat ze andere dingen gingen doen. Maar sommige ecosystemen bleken hierdoor niet hersteld te kunnen worden zonder het herintroduceren van een bedreigde toppredator.
                     </p>
                     <p>
