--- a/index.html
+++ b/index.html
@@ -727,9 +727,9 @@
                       ingenieurs en maken ze holtes en dammen waar andere soorten weer in kunnen vestigen, zoals otters, muskusratten, eenden, vissen, reptielen en amfibieën.
                     </p>
                     <p>
-                      Zoals in de rest van de Verenigde Staten, waren de coyote, of prairiewolven, populaties in Yellowstone bijna uit de handen gelopen. Maar sinds dat de wolven terugkwamen, begonnen ze de coyotes te doden en hebben ze de populatie van coyotes afgenomen met
+                      Zoals in de rest van de Verenigde Staten, waren de coyote populaties in Yellowstone bijna uit de handen gelopen. Maar sinds dat de wolven terugkwamen, begonnen ze de coyotes te doden en hebben ze de populatie van coyotes afgenomen met
                       wel 80 procent in gebieden waar wolven leven. De coyotes die er nog zijn, zijn een stuk schrikachtiger en voorzichtig geworden. Met de afname van coyotes begonnen de hoeveelheden van knaagdieren, zoals konijnen en muizen, toe te
-                      nemen. Wat daar weer ervoor zorgde dat er meer haviken, wezels, vossen en dassen zich gingen vestigen, omdat zij weer meer eten voorziening hadden. Raven en arenden migreerden naar de gebieden waar wolven aanwezig waren, om te smikkelen
+                      nemen. Wat daar weer ervoor zorgde dat er meer haviken, wezels, vossen en dassen zich gingen vestigen, omdat ze weer meer eten voorziening hadden. Raven en arenden migreerden naar de gebieden waar wolven aanwezig waren, om te smikkelen
                       van de restjes die de wolven achterlieten. Ook verschillende soorten insecten eten van de karkassen die wolven achterlaten. Zelfs beren kwamen erbij om van de restjes te genieten of door de prooi van wolven te stelen, waardoor hun
                       populatie ook sterk toenam, maar ook omdat er nu meer bessen en dergelijke aan de regenererende planten groeien. De beren zorgden daarna voor een domino-effect en versterkten de impact van de wolven door een aantal andere populaties
                       van, bijvoorbeeld, herten af te nemen.
