--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                       Afbeelding 11: roedel wolven op pad
                     </p>
                     <p>
-                      Na de herintroductie van de wolven in Yellowstone, zijn de elanden, herten en bizons sterker geworden, de bomen en andere planten gezonder en de grassen hoger.
+                      Na de herintroductie van de wolven in Yellowstone, zijn de elanden, herten en bizons sterker geworden. Ook zijn de bomen, grassen en andere planten gezonder en hoger geworden.
                     </p>
                     <p>
                       Wolven jagen voornamelijk op grote herbivoren, waardoor de populatie van deze dieren sterk afneemt. Maar de wolven jagen niet op willekeurig prooi. Ze prooien meestal op de zwakkelingen, zoals jongere of minder gezonde. Oudere elanden zijn, bijvoorbeeld,
