--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                       Wolven jagen voornamelijk op grote herbivoren, waardoor de populatie van deze dieren sterk afneemt. Maar de wolven jagen niet op willekeurig prooi. Ze prooien meestal op de zwakkelingen, zoals jongere of minder gezonde. Oudere elanden zijn, bijvoorbeeld,
                       groter en agressiever, waardoor het moeilijker is voor de wolven om op deze individuen te jagen. De wolven rennen achter de herten en elanden aan, waardoor zij worden geforceerd om harder, sneller en verder te rennen (zie afbeelding
                       10). Tijdens dat de elanden en herten rennen, zullen hun hoeven de bodem aanstampen, zodat er meer planten kunnen groeien. Vervolgens, als je niet snel genoeg bent of lang genoeg kan rennen, word je gepakt door de wolven. Hierdoor
-                      zullen alle zwakke dieren in een populatie uitgeroeid worden, waardoor de sterke en gezonde overblijven en hun nakomelingen ook de best geschikte genen voor hun leefgebied zullen overerven. In het kort, de selectiedruk is weer toegenomen,
+                      zullen alle zwakke dieren in een populatie uitgeroeid worden, met als gevolg dat de sterke en gezonde overblijven en hun nakomelingen ook de best geschikte genen voor hun leefgebied zullen overerven. In het kort, de selectiedruk is weer toegenomen,
                       waardoor survival of the fittest weer in volle kracht geherintroduceerd is in Yellowstone.
                     </p>
                     <p>
@@ -704,7 +704,7 @@
                     </p>
                     <p>
                       Niet alleen heeft de wolf invloed op de gezondheid van herbivoren, maar ze tasten ook het gedrag van deze soorten aan. Herbivoren zoals herten en elanden worden geforceerd om niet een al te lange tijd te blijven in hetzelfde gebied vanwege het risico
-                      dat ze worden opgejaagd door wolvenroedels. Door deze migratie zullen de planten in het gebied minder aangetast zijn en kunnen ze sneller regenereren. Ook is het dat herbivoren het territorium van een wolvenroedel niet durven te
+                      dat ze worden opgejaagd door wolvenroedels. Door deze vlugge migratie zullen de planten in het gebied voor minder lange periodes aangetast worden, waardoor de planten ononderbroken sterken kunnen verder groeien. Ook is het dat herbivoren het territorium van een wolvenroedel niet durven te
                       betreden, waardoor er zogenaamde “bufferzones” ontstaan. Dit zijn gebieden tussen territoria van verschillende wolvenroedels in, waar de herbivoren vaak in goede omstandigheden leven. Wolven die hun roedel hebben verlaten vinden
                       vaak hier goed onderdak, veiligheid en eten, met minder risico om aangevallen te worden door wolvenroedels in de nabije gebieden. Alhoewel, dit betekent niet dat het waterdichte, veilige gebieden zijn. Het is mogelijk dat er om het
                       gebied wordt gevochten door de roedels in de omgeving en dat de eenzame wolf alsnog aangevallen kan worden.
