--- a/index.html
+++ b/index.html
@@ -704,8 +704,7 @@
                     </p>
                     <p>
                       Niet alleen heeft de wolf invloed op de gezondheid van herbivoren, maar ze tasten ook het gedrag van deze soorten aan. Herbivoren zoals herten en elanden worden geforceerd om niet een al te lange tijd te blijven in hetzelfde gebied vanwege het risico
-                      dat ze worden opgejaagd door wolvenroedels. Door deze vlugge migratie zullen de planten in het gebied voor minder lange periodes aangetast worden, waardoor de planten ononderbroken sterken kunnen verder groeien. Ook is het dat herbivoren het territorium van een wolvenroedel niet durven te
-                      betreden, waardoor er zogenaamde “bufferzones” ontstaan. Dit zijn gebieden tussen territoria van verschillende wolvenroedels in, waar de herbivoren vaak in goede omstandigheden leven. Wolven die hun roedel hebben verlaten vinden
+                      dat ze worden opgejaagd door wolvenroedels. Door deze vlugge migratie zullen de planten in het gebied voor minder lange periodes aangetast worden, waardoor de planten ononderbroken sneller kunnen regenereren. Herbivoren vermeiden vaak ook het territorium van een wolvenroedel, waardoor er zogenaamde “bufferzones” ontstaan. Dit zijn gebieden tussen territoria van verschillende wolvenroedels in, waar de herbivoren vaak in goede omstandigheden leven. Wolven die hun roedel hebben verlaten vinden
                       vaak hier goed onderdak, veiligheid en eten, met minder risico om aangevallen te worden door wolvenroedels in de nabije gebieden. Alhoewel, dit betekent niet dat het waterdichte, veilige gebieden zijn. Het is mogelijk dat er om het
                       gebied wordt gevochten door de roedels in de omgeving en dat de eenzame wolf alsnog aangevallen kan worden.
                     </p>
