--- a/index.html
+++ b/index.html
@@ -1308,6 +1308,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js "></script>
+  <script src="vendor/jquery/jquery.easing.js "></script>
   <script async src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script async src="vendor/imagesloaded/imagesloaded.min.js"></script>
   <script async src="vendor/custom/js/custom.js "></script>
