Add in popper.js support 1/2

--- a/index.html
+++ b/index.html
@@ -1307,6 +1307,7 @@
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-counter"><p class="pageNumber">1</p></button>
 
   <!-- Bootstrap core JavaScript -->
+  <script src="vendor/popper/popper.min.js "></script>
   <script src="vendor/jquery/jquery.min.js "></script>
   <script src="vendor/jquery/jquery.easing.js "></script>
   <script async src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
