--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a class="navbar-brand" href="javascript:reload();">Lupus Inc.</a>
 
     <button class="btn btn btn-primary contact-button" onclick="javascript:contacts(true);"><i class="fa fa-address-book fa-lg" style="text-align:right;color:white;"></i> Contact</button>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+    <button class="navbar-toggler haspop" type="button" data-toggle="collapse" data-target="#collapsingNavbar" data-ride="carousel" data-toggle="popover" data-placement="top" title="Navigatie" data-content="Navigeer makkelijk naar alle onderwerpen">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse" id="collapsingNavbar">
@@ -92,7 +92,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleIndicators" class="carousel slide haspop" data-ride="carousel" data-toggle="popover" data-placement="top" title="Suggesties" data-content="Klik op het plaatje om naar de suggestie te gaan">
                   <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                       <img class="d-block carousel-image0 img-fluid" src="vendor/images/logo.png"></img>
@@ -168,7 +168,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+              <div class="testing col-lg-6 col-md-6 col-sm-12 col-xs-12">
                 <h1>Inleiding</h1>
                 <p>
                   Ons profielwerkstuk gaat over de wolf. Maar niet alleen wat de wolf is, maar ook wat hij doet, hoe hij het doet en wat de gevolgen zijn op de natuur om ons heen. De wolf is namelijk niet zo simpel als de meeste mensen denken. Het is een erg complex dier
@@ -1303,7 +1303,7 @@
     </div>
   </div>
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-up" onclick="movePage(NaN, false);"><i class="fa fa-arrow-up" aria-hidden="true"></i></button>
-  <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-down" onclick="movePage(NaN, true);"><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
+  <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-down haspop" onclick="movePage(NaN, true);" data-toggle="popover" title="Knoppen" data-content="Ga hier naar de volgende pagina."><i class="fa fa-arrow-down" aria-hidden="true"></i></button>
   <button type="button" class="btn btn btn-primary btn-circle btn-lg btn-counter"><p class="pageNumber">1</p></button>
 
   <!-- Bootstrap core JavaScript -->
