Add in popper.js support 3/2  account for small devices

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 content">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                <div id="carouselExampleIndicators" class="carousel slide haspop" data-ride="carousel" data-toggle="popover" data-placement="top" title="Suggesties" data-content="Klik op het plaatje om naar de suggestie te gaan">
+                <div id="carouselExampleIndicators" class="carousel slide haspop" data-ride="carousel" data-toggle="popover" data-placement="bottom" title="Suggesties" data-content="Klik op het plaatje om naar de suggestie te gaan">
                   <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                       <img class="d-block carousel-image0 img-fluid" src="vendor/images/logo.png"></img>
