--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="theme-color" content="rgba(50, 50, 50)">
 
   <title>Lupus Inc.</title>
   <link rel="icon" href="vendor/images/favicon.ico" type="image/x-icon">
