Clean up some stuff, standardize

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
   <img class="background" src="vendor/images/background.jpg" />
   <!-- Main navigationbar -->
   <nav class="navbar fixed-top navbar-dark navbar-custom" id="navbar">
-    <a class="navbar-brand" href="javascript:reload();">Lupus Inc.</a>
+    <a class="navbar-brand">Lupus Inc.</a>
 
-    <button class="btn btn btn-primary contact-button" onclick="javascript:contacts(true);"><i class="fa fa-address-book fa-lg" style="text-align:right;color:white;"></i> Contact</button>
+    <button class="btn btn btn-primary contact-button" onclick="javascript:contacts(true);"><i class="fa fa-address-book fa-lg"></i> Contact</button>
+    <button class="btn btn btn-primary home-button" onclick="javascript:reload();"><i class="fa fa-home fa-lg"></i></button>
     <button class="navbar-toggler haspop" type="button" data-toggle="collapse" data-target="#collapsingNavbar" data-ride="carousel" data-toggle="popover" data-placement="top" title="Navigatie" data-content="Navigeer makkelijk naar alle onderwerpen">
         <span class="navbar-toggler-icon"></span>
     </button>
